Proposal. Replacing com.google.common.base.MoreObjects.firstNonNull & com.google.common.base.Preconditions.checkArgument