@@ -15,7 +15,7 @@
  */
 package com.github.tomakehurst.wiremock.extension.responsetemplating;
 
-import static com.google.common.base.MoreObjects.firstNonNull;
+import static com.github.tomakehurst.wiremock.common.ParameterUtils.getFirstNonNull;
 
 import com.github.jknack.handlebars.Handlebars;
 import com.github.jknack.handlebars.Helper;
@@ -56,7 +56,7 @@ public class ResponseTemplateTransformer extends ResponseDefinitionTransformer
   }
 
   public ResponseTemplateTransformer(boolean global, String helperName, Helper<?> helper) {
-    this(global, ImmutableMap.of(helperName, helper));
+    this(global, Map.of(helperName, helper));
   }
 
   public ResponseTemplateTransformer(boolean global, Map<String, Helper<?>> helpers) {
@@ -97,7 +97,7 @@ public class ResponseTemplateTransformer extends ResponseDefinitionTransformer
 
     final ImmutableMap<String, Object> model =
         ImmutableMap.<String, Object>builder()
-            .put("parameters", firstNonNull(parameters, Collections.<String, Object>emptyMap()))
+            .put("parameters", getFirstNonNull(parameters, Collections.<String, Object>emptyMap()))
             .put("request", RequestTemplateModel.from(request, pathTemplate))
             .putAll(addExtraModelElements(request, responseDefinition, files, parameters))
             .build();
